--- a/.classpath
+++ b/.classpath
@@ -13,5 +13,6 @@
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
+	<classpathentry kind="lib" path="C:/Users/youri/Documents/AP 16-17/webtech3/restlet-jse-2.3.9/lib/org.restlet.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
